# devspace

./: .editorconfig  .gitignore  .goreleaser.yaml  Cargo.toml  Makefile  README.md  devspace.go  go.mod  go.sum  tools.go
.devcontainer/: Dockerfile  devcontainer.json
.devspace/: Dockerfile  config
.github/workflows/: release.yaml
cmd/: build.go  clean.go  root.go  shell.go
core/: base_env.go  base_env_test.go  docker.go  encrypt.go  encrypt_test.go  print.go  project.go  project_config.go  project_config_test.go  project_test.go  project_test_suite.go  test_suite.go  utils.go  wire.go  wire_gen.go
env/: base_env.go  base_env_test.go  container_env.go  container_env_test.go  docker_env.go  docker_env_test.go  env_test_suite.go  path.go
logging/: log.go  print.go
src/: config.rs  main.rs  project.rs
src/cli/: command.rs  mod.rs
src/docker/: client.rs  container.rs  image.rs  mod.rs  process.rs  state.rs
tests/: config
tests/.devspace/: config
